--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-INTEX-7FB891E2-F8D9-4EBB-9DDB-FD604DAD8849;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "User ID=postgres;Password=ILoveIntex!;Host=database-1.cwyrmxcmisvd.us-east-2.rds.amazonaws.com;Port=5432;Database=database-1;Pooling=true;Min Pool Size=0;"
   },
   "Logging": {
     "LogLevel": {
