--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=ILoveIntex!;Host=database-1.cwyrmxcmisvd.us-east-2.rds.amazonaws.com;Port=5432;Database=database-1;Pooling=true;Min Pool Size=0;"
+    "DefaultConnection": "User ID=postgres;Password=ILoveIntex!;Host=database-1.cwyrmxcmisvd.us-east-2.rds.amazonaws.com;Port=5432;Database=postgres;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +11,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//Pooling=true;Min Pool Size=0;
