--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YourDatabaseName;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "User ID=postgres;Password=ILoveIntex!;Host=database-1.cwyrmxcmisvd.us-east-2.rds.amazonaws.com;Port=5432;Database=postgres;"
   },
   "Logging": {
     "LogLevel": {
